# eaters2d-old

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: build_and_deploy_bevy_page.yml
pkg/: libeaters2d.d.ts  libeaters2d.js  libeaters2d_bg.wasm.d.ts  package.json
src/: creature.rs  food.rs  genetic_algorithm.rs  lib.rs  main.rs  neural_network.rs  smell.rs
