[package]
name = "eaters2d"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
name = "libeaters2d"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
